@@ -143,8 +143,8 @@ class FinderIndexerDriverMysql extends FinderIndexer
 				. $db->quote($item->publish_end_date) . ', '
 				. $db->quote($item->start_date) . ', '
 				. $db->quote($item->end_date) . ', '
-				. $db->quote($item->list_price) . ', '
-				. $db->quote($item->sale_price)
+				. (double) ($item->list_price ? $item->list_price : 0) . ', '
+				. (double) ($item->sale_price ? $item->sale_price : 0)
 			);
 			$db->setQuery($query);
 			$db->execute();
@@ -170,8 +170,8 @@ class FinderIndexerDriverMysql extends FinderIndexer
 			$query->set($db->qn('publish_end_date') . ' = ' . $db->quote($item->publish_end_date));
 			$query->set($db->qn('start_date') . ' = ' . $db->quote($item->start_date));
 			$query->set($db->qn('end_date') . ' = ' . $db->quote($item->end_date));
-			$query->set($db->qn('list_price') . ' = ' . $db->quote($item->list_price));
-			$query->set($db->qn('sale_price') . ' = ' . $db->quote($item->sale_price));
+			$query->set($db->qn('list_price') . ' = ' . (double) ($item->list_price ? $item->list_price : 0));
+			$query->set($db->qn('sale_price') . ' = ' . (double) ($item->sale_price ? $item->sale_price : 0));
 			$query->where('link_id = ' . (int) $linkId);
 			$db->setQuery($query);
 			$db->execute();
